# medhub

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
backend/: Dockerfile  alembic.ini  conftest.py  entrypoint.sh  pyproject.toml
backend/app/: export_openapi.py  main.py
backend/app/api/: deps.py  errors.py  health.py  openapi.py  router.py
backend/app/appointments/: service.py  state.py
backend/app/attachments/: dicom_validation.py  service.py
backend/app/audit/: __init__.py  actions.py  deps.py  service.py
backend/app/auth/: cookies.py  csrf.py  lockout.py  login.py  password.py  session.py
backend/app/authz/: admin_projection.py  appointment_visibility.py  consent.py  module_guard.py  service.py
backend/app/clinical/: service.py
backend/app/core/: config.py  logging.py  object_storage.py  security_middleware.py
backend/app/db/: crypto.py  types.py
backend/app/groups/: auto_membership.py  service.py
backend/app/identity/: account_service.py  activation.py  erasure.py  lifecycle.py
backend/app/modules/: contract.py  discovery.py  host.py  platform_services.py  registry_service.py  router_registry.py
backend/app/workers/: celery_app.py  email_renderer.py  email_tasks.py  notifications.py  retention_tasks.py  session_tasks.py
backend/openapi/: openapi.json
backend/scripts/: export_openapi.py  setup_test_data.py
backend/tests/: conftest.py  test_app_factory.py  test_config.py  test_env_example.py  test_export_openapi.py  test_health.py  test_lifespan.py  test_logging.py  test_toolchain.py
(+658 files in other folders)
