[project]
name = "medhub-backend"
version = "0.1.0"
description = "MedHub medical web application backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pydicom>=2.4.0",
    "fhir.resources>=7.1.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.0",
    "psycopg2-binary>=2.9.0",
    "fakeredis>=2.36.2",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "testcontainers[postgres]>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 85
